@@ -5,11 +5,13 @@ Major features:
 
 Features and improvements:
 
+- Support for pthread_exit and pthread_cancel was added.
 
 User tools and API improvements and changes:
 
 
 Bugfixes:
+
 - In some cases, not all regions are exited at measurement finalization
   time. Fixed.
 - Using PGI compiler instrumentation in conjunction with tasks could
